# recursive-types-3.11

./: pyproject.toml
tests/: test_jsontype.py
