[tool.poetry]
name = "recursive-types"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
mypy = "^1.7.0"
typeguard = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
